# ACG

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.sh  vcpkg.json  xmake.lua
Core/: CMakeLists.txt  xmake.lua
Core/include/: agl_core.hpp  agl_math.hpp  mesh.hpp  visualizable.hpp
Core/include/acg_core/: acg_core.hpp  acg_math.hpp  common.hpp  core.hpp  def.hpp  init.hpp  math.hpp  mesh.hpp
Core/include/acg_core/geometry/: common_models.hpp  halfedge_mesh.hpp  interp.hpp  mesh.hpp  normal.hpp  normals.hpp  particle.hpp  particlesystem.hpp  smoother.hpp
Core/include/acg_core/math/: all.hpp  constants.hpp  iter.hpp
Core/include/acg_utils/: acg_utils.hpp  def.hpp  emum_iter.hpp  log.hpp  raw_fileio.hpp  singleton.hpp  tracef.hpp
Core/src/: acg_math.cpp  agl_math.cpp  init.cpp
Core/src/geometry/: common_models.cpp
Core/test/: CMakeLists.txt  main.cpp  test1.cpp  test_math.cpp  test_sad.cpp  test_utils.cpp
Port/: CMakeLists.txt
Port/include/: objloader.hpp
Port/test/: CMakeLists.txt
Utils/: CMakeLists.txt  xmake.lua
Utils/include/: Serializer.h  Utilities.h
Utils/include/acg_utils/: acg_utils.hpp  all.hpp  box.hpp  debugger.hpp  def.hpp  log.hpp
Utils/include/agl_utils/: agl_utils.hpp  all.hpp  debug_message.hpp
Utils/src/: acg_utils.cpp  agl_utils.cpp
Utils/test/: CMakeLists.txt  test_serializer.cpp
Utils/test/src/: main.cpp  serializer.cpp  test_json.cpp  test_serializer.cpp
Visualizer/: CMakeLists.txt  roadmap.md  xmake.lua
Visualizer/include/acg_visualizer/: _vk.hpp  buffer_def.hpp  camera.hpp  convent.hpp  mesh_draw.hpp  mesh_pipeline.hpp  point_light.hpp  renderer.hpp  scene.hpp  ui_pipeline.hpp  visable.hpp  vkinst.hpp  vkinstance.hpp  vkwindow.hpp  window.hpp  world_controller.hpp
Visualizer/shader/: 3d.frag  3d.vert  build.sh
Visualizer/src/: camera.cpp  mesh_draw.cpp  mesh_pipeline.cpp  renderer.cpp  scene.cpp  ui_pipeline.cpp  vkinst.cpp  vkwindow.cpp  window.cpp
Visualizer/standalone/: main.cpp
cmake/: CPM.cmake  co.cmake  (+6 more)
core/: CMakeLists.txt  xmake.lua
core/include/acg_core/: all.hpp  common.hpp  init.hpp
core/include/acg_utils/: acg_utils.hpp  align.hpp  all.hpp  common.hpp  emum_iter.hpp  init.hpp  log.hpp  pragma.hpp  random.hpp  result.hpp  time.hpp
core/include/acore/: access.hpp  all.hpp  common.hpp  foreach.hpp  init.hpp
core/include/autils/: common.hpp  init.hpp  log.hpp  meta.hpp  random.hpp  result.hpp  time.hpp  tracef.hpp
core/source/core/: init.cpp  tetface.cpp
core/source/utils/: init.cpp  log.cpp  raw_fileio.cpp  time.cpp
core/src/: init.cpp
core/src/core/: init.cpp
core/src/utils/: init.cpp  log.cpp  raw_fileio.cpp  time.cpp
core/test/: main.cpp  test1.cpp  test_coord.cpp  test_geometry.cpp  test_interp.cpp  test_math.cpp  test_sad.cpp  test_spatial.cpp  test_utils.cpp
data/: .gitignore  CMakeLists.txt  xmake.lua
data/data/house-ele-node/: house.ele
data/include/adata/: common.hpp  obj_export.hpp
data/shaders/: 3d.frag.spv  3d.vert.spv  mesh.vert.spv  wireframe.vert.spv
data/source/: data_path.cpp  ele_loader.cpp  node_loader.cpp  obj_export.cpp
data/source/json/: splash_surf_json.cpp
data/test/: test_ele.cpp  test_node.cpp
examples/: CMakeLists.txt  xmake.lua
examples/async_gui/: main.cpp
examples/bench_eigen_call/: main.cpp
examples/bench_math_utils/: iter.cpp  iter.hpp  main.cpp
examples/bench_sad/: main.cpp
examples/elastic-shape-matching/: app.cpp  app.hpp  main.cpp
examples/fem-explicit/: app.cpp  app.hpp  main.cpp
examples/fem-implicit/: app.cpp  app.hpp  main.cpp
examples/free_fall/: ff.cpp  ff.hpp  main.cpp
examples/ggui/: api.cpp  api.hpp  main.cpp
examples/ggui2/: main.cpp
examples/gui/: main.cpp
examples/heart_fluid/: main.cpp
examples/hybred/: app.cpp  app.hpp  main.cpp
examples/hybred_admm/: app.cpp  app.hpp  main.cpp
examples/hybrid/: app.cpp  app.hpp  main.cpp
examples/hybrid_admm/: app.cpp  main.cpp
examples/hybrid_admm_ct/: app.cpp  app.hpp  main.cpp
examples/mass-spring/: main.cpp  mass_spring.cpp  mass_spring.hpp
examples/mass_spring/: main.cpp  mass_spring.cpp  mass_spring.hpp
examples/mpm-explicit/: app.cpp  app.hpp  main.cpp
examples/nbody/: main.cpp  nbody.cpp  nbody.hpp
examples/sad_bench/: main.cpp
examples/spatial-subdivision/: main.cpp
examples/test_eigen_mp/: main.cpp
examples/ui_only_world/: main.cpp
gui/: CMakeLists.txt  CMakeLists.txt.todo  readme.md  roadmap.md  xmake.lua
gui/include/acg_gui/: AsyncGui.hpp  all.hpp  async_gui.hpp  camera.hpp  convent.hpp  ggui.hpp  hook.hpp  init.hpp  light.hpp  mp_scene.hpp  point_light.hpp  scene.hpp  world_controller.hpp
gui/include/agui/: camera.hpp  convent.hpp  ggui.hpp  gui.hpp  init.hpp  light.hpp  mp_scene.hpp  perfacenormal.hpp  scene.hpp  utils.hpp  world_controller.hpp
gui/shader/: 3d.vert  mesh.frag  mesh.vert  mesh_pc.frag  mesh_pc.vert  point.frag  point.vert  wireframe.frag  wireframe.vert
gui/source/: buffer_def.cpp  camera.cpp  context.cpp  ggui.cpp  graphics_context.cpp  graphics_pass.cpp  gui.cpp  imnodes.cpp  init.cpp  mesh_pipeline.cpp  mesh_ppl.cpp  mp_scene.cpp  perface_normal.cpp  point_ppl.cpp  renderer.cpp  scene.cpp  ui_pass.cpp  ui_pipeline.cpp  utils.cpp  window.cpp  wireframe_ppl.cpp  world_controller.cpp
gui/src/: async_gui.cpp  buffer_def.cpp  camera.cpp  context.cpp  ggui.cpp  graphics_context.cpp  graphics_pass.cpp  init.cpp  mesh_pipeline.cpp  mesh_ppl.cpp  mp_scene.cpp  point_ppl.cpp  renderer.cpp  scene.cpp  ui_pipeline.cpp  window.cpp  wireframe_ppl.cpp  world_controller.cpp
physics/: CMakeLists.txt  xmake.lua
physics/include/aphysics/: common.hpp  constriants.hpp
physics/source/: common.cpp
physics/source/collision/: detect.cpp
physics/source/distance/: edge_edge_value.cpp  edge_vertex_value.cpp  vertex_face_value.cpp  vertex_vertex_value.cpp
physics/source/elastic/: invariants.cpp  neohookean.cpp  shape_matching.cpp  stvk.cpp
physics/source/mpm/: transfer.cpp
physics/test/: test_ccd.cpp  test_elastic.cpp  test_mpm.cpp  test_solver.cpp
(+271 files in other folders)
